1. Fixed scrollbar issue while we have trial benner and school toggle at header

--- a/src/app/admin/id-cards/id-card-editor/id-card-editor.component.scss
+++ b/src/app/admin/id-cards/id-card-editor/id-card-editor.component.scss
@@ -137,7 +137,7 @@ app-id-card-editor {
 					}
 				}
 				.scrollable {
-					max-height: calc(100vh - 110px);
+					max-height: calc(100vh - 190px);
 					overflow-y: auto;
 					padding: 0 22px;
 				}
